--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./buttons.css">
     <title>Testing and prewiev site</title>
 </head>
 <body>
-    <button class="simpleButton">Simple button</button>
+    <button class="button buttonAnim">Basic styling</button>
+    <button class="button shadowClick">Basic with shadow</button>
+    <button class="button disabled" disabled>Disabled button</button>
+    <button class="button showMore showMoreRight"><span>Show more</span></button>
+    <button class="button showMore showMoreDown"><span>Show more</span></button>
+    
 </body>
 </html>
